--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pretty empty here ... just like inside my head</h1>
+    <h1>pretty empty here ...</h1>
 </body>
 </html>
