--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>pretty empty here ...</h1>
+    <h1>Aufgaben</h1>
+    <h2>Kapitel 1 - HTML und CSS</h2>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe1/index.html">Aufgabe 1.1</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe2/index.html">Aufgabe 1.2</a>
 </body>
 </html>
