exercise 1.2 small changes

--- a/Kapitel1/Aufgabe2/kontakt.html
+++ b/Kapitel1/Aufgabe2/kontakt.html
@@ -18,11 +18,11 @@
 
     <h1>Kontakt</h1>
     <div id="social_media">
-        <a href="https://twitter.com/Wiswir"><img src="icon_twitter.png" alt="Twitter" height="50px" width="auto"></a>
-        <a href="https://www.youtube.com/channel/UC6u8jG04m5zysqsdXRcm-UA"><img src="icon_youtube.png" alt="YouTube" height="50px" width="auto"></a>
-        <a href="https://www.twitch.tv/wiswir"><img src="icon_twitch.png" alt="Twitch" height="50px" width="auto"></a>
-        <a href="https://www.instagram.com/soren.wi/"><img src="icon_instagram.png" alt="Instagram" height="50px" width="auto"></a>
-        <a href="https://www.pinterest.de/srenwinterhalder/"><img src="icon_pinterest.png" alt="Pinterest" height="50px" width="auto"></a>
+        <a href="https://twitter.com/Wiswir" target="_blank"><img src="media/icon_twitter.png" alt="Twitter" height="50"></a>
+        <a href="https://www.youtube.com/channel/UC6u8jG04m5zysqsdXRcm-UA" target="_blank"><img src="media/icon_youtube.png" alt="YouTube" height="50"></a>
+        <a href="https://www.twitch.tv/wiswir" target="_blank"><img src="media/icon_twitch.png" alt="Twitch" height="50"></a>
+        <a href="https://www.instagram.com/soren.wi/" target="_blank"><img src="media/icon_instagram.png" alt="Instagram" height="50"></a>
+        <a href="https://www.pinterest.de/srenwinterhalder/" target="_blank"><img src="media/icon_pinterest.png" alt="Pinterest" height="50"></a>
     </div>
     <p><b>Email:</b> soeren.winterhalder@hs-furtwangen.de</p>
 </body>
