--- a/Kapitel1/Aufgabe2/ueber_mich.html
+++ b/Kapitel1/Aufgabe2/ueber_mich.html
@@ -1,13 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Über Mich</title>
-</head>
-<body>
-    <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -26,7 +17,7 @@
     </div>
 
     <h1 id="top">Sören Winterhalder</h1>
-    <img src="bild.jpg" alt="Ein Bild von mir">
+    <img src="media/bild.jpg" alt="Ein Bild von mir">
     <h2>Zu meiner Person</h2>
     <p>
         Ich bin 19 Jahre alt, komme aus Baiersbronn und interessiere mich für Games, Zeichnen und Sport. 
@@ -143,7 +134,5 @@
     <br>
     <a href="#top">Zurück nach oben</a>
     
-</body>
-</html>
 </body>
 </html>
