--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe1/index.html">Aufgabe 1.1</a>
     <br>
     <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe2/index.html">Aufgabe 1.2</a>
+    <br>
+    <a href="#">Aufgabe 1.3</a>
+    <br>
+    <a href="#">Aufgabe 1.4</a>
 </body>
 </html>
