--- a/Kapitel1/Aufgabe2/index.html
+++ b/Kapitel1/Aufgabe2/index.html
@@ -10,6 +10,7 @@
     <div id="navigation">
         <dl>
             <dt><b>Navigation</b></dt>
+            <dd><a href="#">Portfolio</a></dd>
             <dd><a href="ueber_mich.html">Über Mich</a></dd>
             <dd><a href="kontakt.html">Kontakt</a></dd>
         </dl>
