--- a/Kapitel1/Aufgabe2/kontakt.html
+++ b/Kapitel1/Aufgabe2/kontakt.html
@@ -11,7 +11,8 @@
         <dl>
             <dt><b>Navigation</b></dt>
             <dd><a href="index.html">Portfolio</a></dd>
-            <dd><a href="ueber_mich.html">Über Mich</a></dd>     
+            <dd><a href="ueber_mich.html">Über Mich</a></dd>
+            <dd><a href="#">Kontakt</a></dd>     
         </dl>
         <hr>
     </div>
