--- a/Kapitel1/Aufgabe2/ueber_mich.html
+++ b/Kapitel1/Aufgabe2/ueber_mich.html
@@ -11,6 +11,7 @@
         <dl>
             <dt><b>Navigation</b></dt>
             <dd><a href="index.html">Portfolio</a></dd>
+            <dd><a href="#">Über Mich</a></dd>
             <dd><a href="kontakt.html">Kontakt</a></dd>
         </dl>
         <hr>
