--- a/Kapitel1/Aufgabe2/index.html
+++ b/Kapitel1/Aufgabe2/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div id="navigation">
+    <nav>
         <dl>
             <dt><b>Navigation</b></dt>
             <dd><a href="#">Portfolio</a></dd>
@@ -15,7 +15,7 @@
             <dd><a href="kontakt.html">Kontakt</a></dd>
         </dl>
         <hr>
-    </div>
+    </nav>
     
     <h1>Portfolio?</h1>
 
@@ -32,5 +32,53 @@
     <p><q>Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.</q> - Albert Einstein</p>
     
     <button>Dieser Button macht absolut garnichts</button>
+    <br>
+    <article>
+        <h3>Hier könnte ihr Artikel stehen...</h3>
+        <p>... oder auch nicht, wer weiß</p>
+    </article>
+    <br>
+    <table>
+        <caption>Eine Inhaltslose Tabelle</caption>
+        <tr>
+            <th>Weder</th>
+            <th>hier</th>
+        </tr>
+        <tr>
+            <th>noch</th>
+            <th>hier</th>
+        </tr>
+        <tr>
+            <th>steht</th>
+            <th>sinnvolles</th>
+        </tr>
+    </table>
+    <br>
+
+    <form>
+        <label for="textfeld">Dies ist ein Textfeld</label>
+        <input type="text" id="textfeld" placeholder="Ich bin ein textfeld uwu">
+    </form>
+
+    <h3>Zahlen auf Japanisch</h3>
+    <ol>
+        <li>ichi</li>
+        <li>ni</li>
+        <li>san</li>
+        <li>yon</li>
+        <li>go</li>
+        <li>roku</li>
+        <li>nana</li>
+        <li>hachi (gesundheit)</li>
+        <li>kyu</li>
+        <li>ju</li>
+    </ol>
+
+
+    <label for="cats-or-dogs">Katzen oder Hunde</label>
+    <select id="cats-or-dogs">
+      <option value="katze">Katze</option>
+      <option value="katze-caps">KATZE</option>
+    </select> 
 </body>
 </html>
