more tags added

--- a/Kapitel1/Aufgabe2/kontakt.html
+++ b/Kapitel1/Aufgabe2/kontakt.html
@@ -7,7 +7,7 @@
     <title>Kontakt</title>
 </head>
 <body>
-    <div id="navigation">
+    <nav id="navigation">
         <dl>
             <dt><b>Navigation</b></dt>
             <dd><a href="index.html">Portfolio</a></dd>
@@ -15,7 +15,7 @@
             <dd><a href="#">Kontakt</a></dd>     
         </dl>
         <hr>
-    </div>
+    </nav>
 
     <h1>Kontakt</h1>
     <div id="social_media">
@@ -26,5 +26,14 @@
         <a href="https://www.pinterest.de/srenwinterhalder/" target="_blank"><img src="media/icon_pinterest.png" alt="Pinterest" height="50"></a>
     </div>
     <p><b>Email:</b> soeren.winterhalder@hs-furtwangen.de</p>
+
+    <form>
+        <input type="text" id="fname" placeholder="First Name"> <br>
+        <input type="text" id="lname" placeholder="Last Name"> <br>
+        <input type="text" id="email" placeholder="E-Mail"> <br>
+        <input type="text" id="message" placeholder="Message"> <br>
+        <input type="submit" id="submit" value="Submit"> <br>
+    </form>
+
 </body>
 </html>
