--- a/Kapitel1/Aufgabe4/index.html
+++ b/Kapitel1/Aufgabe4/index.html
@@ -54,6 +54,11 @@
                 <dd><a href="#cat-ipsum">2.2 Cat Ipsum</a></dd>
                 <dd><a href="#bavaria-ipsum">2.3 Bavaria Ipsum</a></dd>
                 <dd><a href="#samuel-l-ipsum">2.4 Samuel L. Ipsum</a></dd>
+                <dt><a href="#animations">3. Animations</a></dt>
+                <dd><a href="#animation-spinner">3.1 Spinner</a></dd>
+                <dd><a href="#animation-loading-bar">3.2 Loading Bar</a></dd>
+                <dd><a href="#animation-loading-bar-smooth">3.3 Smooth Loading Bar</a></dd>
+                <dd><a href="#animation-heartbeat">3.4 Heartbeat</a></dd>
             </dl>
         </section>
 
@@ -107,6 +112,23 @@
                 The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
             </p>
 
+        </section>
+
+
+        <section id="css-animations">
+            <h2 class="content-heading">CSS Animations</h2>
+
+            <h3 class="content-subheading" id="animation-spinner">Spinner</h3>
+            <div id="spinner"></div>
+
+            <h3 class="content-subheading" id="animation-loading-bar">Loading Bar</h3>
+            <div id="loading-bar"><div></div></div>
+
+            <h3 class="content-subheading" id="animation-loading-bar-smooth">Smooth Loading Bar</h3>
+            <div id="loading-bar-smooth"><div></div></div>
+
+            <h3 class="content-subheading" id="animation-heartbeat">Heartbeat</h3>
+            <div id="heartbeat"><div></div></div>
         </section>
 
     </div>  
