--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <br>
     <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe2/index.html">Aufgabe 1.2</a>
     <br>
-    <a href="#">Aufgabe 1.3</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe3/index.html">Aufgabe 1.3</a>
     <br>
-    <a href="#">Aufgabe 1.4</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe4/index.html">Aufgabe 1.4</a>
 </body>
 </html>
