--- a/Kapitel1/Aufgabe4/index.html
+++ b/Kapitel1/Aufgabe4/index.html
@@ -54,7 +54,7 @@
                 <dd><a href="#cat-ipsum">2.2 Cat Ipsum</a></dd>
                 <dd><a href="#bavaria-ipsum">2.3 Bavaria Ipsum</a></dd>
                 <dd><a href="#samuel-l-ipsum">2.4 Samuel L. Ipsum</a></dd>
-                <dt><a href="#animations">3. Animations</a></dt>
+                <dt><a href="#css-animations">3. CSS Animations</a></dt>
                 <dd><a href="#animation-spinner">3.1 Spinner</a></dd>
                 <dd><a href="#animation-loading-bar">3.2 Loading Bar</a></dd>
                 <dd><a href="#animation-loading-bar-smooth">3.3 Smooth Loading Bar</a></dd>
