--- a/Kapitel2/Aufgabe2/index.html
+++ b/Kapitel2/Aufgabe2/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aufgabe 2.2</title>
     <script src="script.js" defer></script>
 </head>
 <body>
     <canvas id="myCanvas" height="800" width="1500"></canvas>
     <canvas id="objectCanvas" height="800" width="1500"></canvas>
-    
 </body>
 </html>
