more links added to index

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel1/Aufgabe4/index.html">Aufgabe 1.4</a>
 
     <h2>Kapitel 2 - Scripting</h2>
-    <a href="#">Aufgabe 2.1</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel2/Aufgabe1/index.html">Aufgabe 2.1</a>
     <br>
-    <a href="#">Aufgabe 2.2</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel2/Aufgabe2/index.html">Aufgabe 2.2</a>
     <br>
-    <a href="#">Aufgabe 2.3</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel2/Aufgabe3_1/index.html">Aufgabe 2.3.1</a>
     <br>
-    <a href="#">Aufgabe 2.4</a>
+    <a href="https://sorenwi.github.io/GIS-SoSe-2021/Kapitel2/Kapitelaufgabe/index.html">Kapitelaufgabe</a>
 </body>
 </html>
