--- a/Kapitel2/Kapitelaufgabe/index.html
+++ b/Kapitel2/Kapitelaufgabe/index.html
@@ -7,13 +7,13 @@
     <title>Kapitelaufgabe</title>
     <script src="data.js" defer></script>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link href="./style.css" rel="stylesheet" >
 </head>
 <body>
-    <header id="header">Kapitelaufgabe</header>
-    <a href="flower.html" id="chooseFlower">Blume</a>
-    <a href="flower_pot.html" id="chooseFlowerPot">Blumentopf</a>
-    <a href="background.html" id="chooseBackground">Hintergrund</a>
+    <header class="header">Kapitelaufgabe</header>
+    <a href="symbol.html" id="chooseSymbol">Symbol</a>
+    <a href="shield.html" id="chooseShield">Schild</a>
+    <a href="shield_color.html" id="chooseShieldColor">Schildfarbe</a>
     <a href="picture.html"id="picturePreview">Bild anzeigen</a>
 </body>
 </html>
