--- a/Kapitel2/Kapitelaufgabe/shield.html
+++ b/Kapitel2/Kapitelaufgabe/shield.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bild</title>
+    <title>Schild wählen</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="./data.js" defer></script>
     <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./style.css">
 </head>
-<body id="pictureBody" class="subBody">
-    <header class="header">Dein erstelltes Wappen</header>
-    <div id="finalPictureDiv"></div>
-    <a href="./index.html" id="makeNew">Neues Wappen erstellen</a>
+<body id="shieldBody" class="subBody">
+    <header class="header">Wähle ein Schild</header>
+    <div id="shieldOptionPanel" class="optionPanel"></div>
+    <a href="index.html" class="save">Speichern & Zurück</a>
 </body>
 </html>
