--- a/Kapitel2/Kapitelaufgabe/symbol.html
+++ b/Kapitel2/Kapitelaufgabe/symbol.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blume wählen</title>
-    <link rel="stylesheet" href="flower-style.css">
+    <title>Symbol wählen</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="data.js" defer></script>
     <script src="script.js" defer></script>
 </head>
-<body>
-    <header id="header">Wähle eine Blume</header>
-    <div id="flowerOptionPanel"></div>
-    <a href="index.html" id="saveFlower">Speichern & Zurück</a>
+<body id="symbolBody" class="subBody">
+    <header class="header">Wähle ein Symbol</header>
+    <div id="symbolOptionPanel" class="optionPanel"></div>
+    <a href="index.html" class="save">Speichern & Zurück</a>
 </body>
 </html>
