--- a/Kapitel2/Kapitelaufgabe/index.html
+++ b/Kapitel2/Kapitelaufgabe/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header class="header">Kapitelaufgabe</header>
-    <a href="symbol.html" id="chooseSymbol">Symbol</a>
-    <a href="shield.html" id="chooseShield">Schild</a>
-    <a href="shield_color.html" id="chooseShieldColor">Schildfarbe</a>
+    <a href="symbol.html" id="chooseSymbol"><p>Symbol</p></a>
+    <a href="shield.html" id="chooseShield"><p>Schild</p></a>
+    <a href="shield_color.html" id="chooseShieldColor"><p>Schildfarbe</p></a>
     <a href="picture.html"id="picturePreview">Bild anzeigen</a>
 </body>
 </html>
