--- a/Kapitel2/Kapitelaufgabe/picture.html
+++ b/Kapitel2/Kapitelaufgabe/picture.html
@@ -12,6 +12,7 @@
 <body id="pictureBody" class="subBody">
     <header class="header">Dein erstelltes Wappen</header>
     <div id="finalPictureDiv"></div>
-    <a href="./index.html" id="makeNew">Neues Wappen erstellen</a>
+    <a href="./index.html" id="change">Ändern</a>
+    <a href="./index.html" id="makeNew">Neu</a>
 </body>
 </html>
