--- a/Kapitel2/Kapitelaufgabe/picture.html
+++ b/Kapitel2/Kapitelaufgabe/picture.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bild</title>
-    <script src="./data.js" defer></script>
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body id="pictureBody" class="subBody">
     <header class="header">Dein erstelltes Wappen</header>
     <div id="finalPictureDiv"></div>
+    <div id="message">test</div>
     <a href="./index.html" id="change">Ändern</a>
     <a href="./index.html" id="makeNew">Neu</a>
 </body>
