--- a/Kapitel3/Aufgabe1/index.html
+++ b/Kapitel3/Aufgabe1/index.html
@@ -20,7 +20,7 @@
         <label for="genderMID">Male</label>
         <input type="radio" name="gender" value="male" id="genderMID">
         <br>
-        <button type="submit" id="submitBtn">Submit</button>
+        <button type="button" id="submitBtn">Submit</button>
     </form>
     <div id="response"></div>
 </body>
